# serial_device

./: CMakeLists.txt
include/serial_device/: SerialDevice.h
src/: SerialDevice.cpp
test/: read_serial.cpp  serial_device_test.cpp
